# jumphost

./: Dockerfile  README.MD  credentials.yaml  jumphost.py  jumphost.pyw  jumphost.yaml  local.yaml  proxy.py  pylintrc  pyproject.toml  radixdns.py  spawn.py
etc/apt/sources.list.d/: unstable.list
etc/init.d/: jumphost
etc/sudoers.d/: openfortivpn
etc/systemd/system/: jumphost.service
jumphost/: __init__.py  jumphost.py
mock_proxy/: Dockerfile  logging_proxy.yaml  logging_proxy_test.yaml  mock_proxy.py  mock_proxy.yaml  ssl-cert-snakeoil.key  ssl-cert-snakeoil.pem  tcp_proxy.py  test1.yaml  test2.yaml
